--- a/demo/index.html
+++ b/demo/index.html
@@ -5,45 +5,134 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue 3 Button Demo</title>
-    <!-- 引入Vue 3 CDN -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Found-404/Vue3_WaterfallLayout@1.0.0/dist/Waterfall-Vue3.umd.js"></script>
+    <link rel="stylesheet" href="./item.css">
+    <!-- 获取随机项目 -->
+    <script src="./utils.js"></script>
     <style>
+        .item-move {
+            transition: all .5s cubic-bezier(.55, 0, .1, 1);
+            -webkit-transition: all .5s cubic-bezier(.55, 0, .1, 1);
+        }
+    </style>
+    <style>
+        .github-corner:hover .octo-arm {
+            animation: octocat-wave 560ms ease-in-out
+        }
+
+        @keyframes octocat-wave {
+
+            0%,
+            100% {
+                transform: rotate(0)
+            }
+
+            20%,
+            60% {
+                transform: rotate(-25deg)
+            }
+
+            40%,
+            80% {
+                transform: rotate(10deg)
+            }
+        }
+
+        @media (max-width:500px) {
+            .github-corner:hover .octo-arm {
+                animation: none
+            }
+
+            .github-corner .octo-arm {
+                animation: octocat-wave 560ms ease-in-out
+            }
+        }
     </style>
 </head>
 
 <body>
+    <!-- 引入Vue 3 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.global.min.js"></script>
+    <script src="/dist/Waterfall-Vue3.umd.js"></script>
+    <a href="https://github.com/Found-404/Vue3_WaterfallLayout" class="github-corner"
+        aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250"
+            style="fill:#64CEAA; color:#fff; position: absolute;z-index: 1000; top: 0; border: 0; right: 0;"
+            aria-hidden="true">
+            <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" />
+            <path
+                d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+                fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm" />
+            <path
+                d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+                fill="currentColor" class="octo-body" />
+        </svg></a>
     <div id="app">
-        <button class="btn" @click="greet">点击我</button>
-
-        <!-- <Waterfall :line="line ? 'h' : 'v'" :line-gap="200" :min-line-gap="180" :max-line-gap="220" ref="waterfall">
-            <WaterfallSlot v-for="(item, index) in items" :width="item.width" :height="item.height" :key="item.index"
+        <button @click="greet">Click To Switch Line</button>
+        <button @click="shuffle">Refresh</button>
+        <Waterfall :line="line?'h':'v'" :line-gap="200" :min-line-gap="180" :max-line-gap="220" ref="waterfall">
+            <Waterfallslot v-for="(item, index) in items" :width="item.width" :height="item.height" :key="item.index"
                 :order="index" move-class="item-move">
-                <div class="item" :style="item.style" :index="item.index"></div>
-            </WaterfallSlot>
-        </Waterfall> -->
-
+                <div class="item" :index="item.index" :style="item.style"></div>
+            </Waterfallslot>
+        </Waterfall>
     </div>
-
     <script>
-        // import Waterfall from "https://cdn.jsdelivr.net/gh/Found-404/Vue3_WaterfallLayout@1.0.0/dist/Waterfall-Vue3.mjs"
-        const { createApp, ref } = Vue;
+        const { createApp, ref, onMounted, onUnmounted } = Vue;
         const app = createApp({
             setup() {
                 // 响应式数据
-                const count = ref(0);
+                const isBusy = ref(false);
+                const line = ref(true);
+                const items = ref(ItemFactory.get(100));
                 const greet = () => {
-                    console.log(count.value);
+                    line.value = !line.value
                 };
+                // 添加项目
+                function additems() {
+                    if (!isBusy.value && items.value.length < 500) {
+                        isBusy.value = true;
+                        try {
+                            items.value.push(...ItemFactory.get(50));
+                            console.log('Added 50 items, total:', items.value.length);
+                        } finally {
+                            isBusy.value = false;
+                        }
+                    }
+                }
+                // 刷新数据
+                function shuffle() {
+                    items.value = [...items.value].sort(() => Math.random() - 0.5);
+                }
 
+                function reflowed() {
+                    isBusy.value = false
+                }
+
+                // 滚动监听
+                const handleScroll = () => {
+                    var scrollTop = document.documentElement.scrollTop || document.body.scrollTop
+                    if (scrollTop + window.innerHeight >= document.body.clientHeight) {
+                        additems()
+                    }
+                }
+                onMounted(() => {
+                    // 监听滚动到底部
+                    window.addEventListener('scroll', handleScroll)
+                })
+                onUnmounted(() => {
+                    window.removeEventListener('scroll', handleScroll);
+                });
                 // 暴露给模板
                 return {
-                    count,
                     greet,
+                    items,
+                    additems,
+                    line,
+                    shuffle
                 };
             }
         });
-        // app.component('WaterfallLayout', Waterfall);
+        app.component('Waterfall', window['Waterfall-Vue3'].Waterfall);
+        app.component('Waterfallslot', window['Waterfall-Vue3'].Waterfallslot);
         app.mount('#app');
     </script>
 </body>
